# SDL2_airlineWar

./: CMakeLists.txt  ReadMe.md  start.sh
include/: Actor.hpp  AnimSpriteComponent.hpp  Asteroid.hpp  BGSpriteComponent.hpp  CircleComponent.hpp  Component.hpp  Entry.hpp  Game.hpp  InputComponent.hpp  Laser.hpp  Math.hpp  MoveComponent.hpp  PcMan.hpp  Random.hpp  Ship.hpp  SpriteComponent.hpp
include/base/: Actor.hpp
lib/: libSDL2.dylib
src/: Actor.cc  AnimSpriteComponent.cc  Asteriod.cc  BGSpriteComponent.cc  CircleComponent.cc  Component.cc  Entry.cc  Game.cc  InputComponent.cc  Laser.cc  Math.cc  MoveComponent.cc  Random.cc  Ship.cc  SpriteComponent.cc  main.cc
